--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,5 +1,20 @@
+:root {
+  --main-color: #323232
+}
+
 body {
+  position: relative;
   font-family: 'Montserrat', sans-serif;
+  color: var(--main-color);
+}
+
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+p span {
+  font-weight: 500;
 }
 
 .fruit-machine {
@@ -11,6 +26,27 @@ body {
   align-items: center;
   margin-right: auto;
   margin-left: auto;
+}
+
+.header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 15px 10px;
+}
+
+.header h1 {
+  font-size: 3.5rem;
+  font-weight: 600;
+  line-height: 1;
+  text-transform: uppercase;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.game {
+  position: relative;
+  width: 100%;
 }
 
 .reels-wrapper {
@@ -25,39 +61,71 @@ body {
   font-size: 2rem;
   text-align: center;
   text-transform: uppercase;
-  margin-right: 10px;
 }
 
-.reel:last-child {
-  margin-right: 0;
-}
-
-.footer {
+.spin {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  width: 100%;
-}
-
-.footer .side-info {
-  display: flex;
-  flex-direction: column;
-}
-
-.footer .side-info span {
-  margin-bottom: 5px;
-}
-
-.footer .side-info span:last-child {
-  margin-bottom: 0;
+  justify-content: space-between;
+  margin-bottom: 20px;
 }
 
 .spin-button {
   display: inline-block;
   vertical-align: top;
+  color: var(--main-color);
   background-color: transparent;
+  border: 1px solid #c8c8c8;
   border-radius: 5px;
   padding: 5px 10px;
   outline: none;
   cursor: pointer;
+  transition: 0.3s;
+}
+
+.spin-button:hover {
+  color: red;
+  border-color: red;
+}
+
+.message {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 0;
+  transform: translateY(100%);
+}
+
+.info {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 200px;
+  height: 100%;
+  min-height: 100vh;
+  padding: 20px 10px;
+}
+
+.info h2 {
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+.info h2:first-child {
+  margin-top: 0;
+}
+
+.info h2:last-child {
+  margin-bottom: 0;
+}
+
+.info p {
+  margin-bottom: 5px;
+}
+
+.info p:last-child {
+  margin-bottom: 0;
 }
