--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -95,9 +95,13 @@ p span.green {
 
 .reel {
   flex: 0 0 33.333%;
-  font-size: 2.5rem;
+  font-size: 2rem;
   text-align: center;
   text-transform: uppercase;
+}
+
+.reel.win {
+  text-decoration: line-through;
 }
 
 .spin {
@@ -167,7 +171,7 @@ p span.green {
   position: fixed;
   top: 0;
   right: 0;
-  width: 200px;
+  width: 210px;
   height: 100%;
   min-height: 100vh;
   padding: 20px 10px;
