--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -8,20 +8,25 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 62.5%;
+}
+
 body {
   position: relative;
   font-family: 'Montserrat', sans-serif;
+  font-size: 1.6rem;
   color: var(--main-color);
 }
 
 h2 {
-  font-size: 1.5rem;
+  font-size: 3rem;
   font-weight: 600;
 }
 
 p {
   margin-top: 0;
-  margin-bottom: 5px;
+  margin-bottom: 0.5rem;
 }
 
 p:last-child {
@@ -41,9 +46,9 @@ p span.green {
   vertical-align: top;
   color: var(--main-color);
   background-color: transparent;
-  border: 1px solid #c8c8c8;
-  border-radius: 5px;
-  padding: 5px 10px;
+  border: 0.1rem solid #c8c8c8;
+  border-radius: 0.5rem;
+  padding: 0.5rem 1rem;
   outline: none;
   cursor: pointer;
   transition: 0.3s;
@@ -55,25 +60,24 @@ p span.green {
 }
 
 .fruit-machine {
-  max-width: 450px;
-  min-height: 100vh;
+  position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-right: auto;
-  margin-left: auto;
+  justify-content: space-between;
+  min-height: 100vh;
 }
 
 .header {
-  position: absolute;
-  top: 0;
-  left: 0;
-  padding: 15px 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.5rem 1rem;
 }
 
 .header h1 {
-  font-size: 3.5rem;
+  position: relative;
+  z-index: 9;
+  font-size: 7rem;
   font-weight: 600;
   line-height: 1;
   text-transform: uppercase;
@@ -82,25 +86,27 @@ p span.green {
 }
 
 .game {
-  position: relative;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  max-width: 60rem;
   width: 100%;
+  transform: translate(-50%, -50%);
 }
 
 .reels-wrapper {
   position: relative;
-  display: flex;
-  align-items: center;
   width: 100%;
-  height: 36px;
-  margin-bottom: 20px;
+  height: 4.6rem;
+  margin-bottom: 2rem;
   overflow: hidden;
 }
 
 .reel {
   position: absolute;
   top: 0;
-  flex: 0 0 33.333%;
-  font-size: 2rem;
+  width: 33.333%;
+  font-size: 4rem;
   text-align: center;
   text-transform: uppercase;
 }
@@ -121,7 +127,7 @@ p span.green {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 20px;
+  margin-bottom: 2rem;
 }
 
 .spin-cost {
@@ -140,59 +146,29 @@ p span.green {
 }
 
 .message {
-  margin-bottom: 20px;
+  margin-bottom: 2rem;
 }
 
 .message:last-child {
   margin-bottom: 0;
 }
 
-.prize-table {
+.info {
   position: absolute;
-  bottom: 0;
-  left: 0;
-  text-align: center;
-  padding: 15px 12.5px;
-}
-
-.prize-table table {
-  min-width: 400px;
-  min-height: 350px;
-  margin-bottom: 20px;
+  top: 0;
+  right: 0;
+  z-index: 1;
+  width: 21rem;
+  height: 100%;
+  min-height: 100vh;
+  background-color: #ffffff;
+  padding: 2rem 1rem;
   transition: 0.3s;
 }
 
-.prize-table table.hidden {
-  visibility: hidden;
-  opacity: 0;
-}
-
-.prize-table caption {
-  margin-bottom: 20px;
-}
-
-.prize-table caption h2 {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.prize-table td::first-letter {
-  text-transform: uppercase;
-}
-
-.info {
-  position: fixed;
-  top: 0;
-  right: 0;
-  width: 210px;
-  height: 100%;
-  min-height: 100vh;
-  padding: 20px 10px;
-}
-
 .info h2 {
-  margin-top: 20px;
-  margin-bottom: 10px;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
 }
 
 .info h2:first-child {
@@ -204,9 +180,156 @@ p span.green {
 }
 
 .info p {
-  margin-bottom: 5px;
+  margin-bottom: 0.5rem;
 }
 
 .info p:last-child {
   margin-bottom: 0;
+}
+
+.toggle-info {
+  display: none;
+}
+
+.prize-table {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+  text-align: center;
+  background-color: #ffffff;
+  padding: 1.5rem 1.25rem;
+  transition: 0.3s;
+}
+
+.prize-table.hidden {
+  visibility: hidden;
+  opacity: 0;
+}
+
+.prize-table table {
+  min-width: 50rem;
+  min-height: 40rem;
+}
+
+.prize-table caption {
+  margin-bottom: 2rem;
+}
+
+.prize-table caption h2 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.prize-table td::first-letter {
+  text-transform: uppercase;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1.5rem 1rem;
+}
+
+.toggle-prize-table {
+  position: relative;
+}
+
+.toggle-prize-table.toggled {
+  z-index: 9;
+}
+
+
+@media screen and (max-width: 992px) {
+  
+  .header h1 {
+    font-size: 5rem;
+  }
+  
+  .info {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    min-height: 100vh;
+    padding-top: 7rem;
+  }
+
+  .info.hidden {
+    opacity: 0;
+    visibility: hidden;
+  }
+
+  .toggle-info {
+    position: relative;
+    display: inline-block;
+    vertical-align: top;
+  }
+
+  .toggle-info.toggled {
+    z-index: 9;
+  }
+}
+
+
+@media screen and (max-width: 768px) {
+  
+  html {
+    font-size: 40%;
+  }
+  
+  .game {
+    max-width: 50rem;
+  }
+  
+  .reels-wrapper {
+    height: 2.9rem;
+  }
+  
+  .prize-table table {
+    min-width: 35rem;
+    min-height: 25rem;
+  }
+}
+
+
+@media screen and (max-width: 576px) {
+  
+  h2 {
+    font-size: 2.5rem;
+  }
+  
+ .header h1 {
+   font-size: 3.5rem;
+ }
+ 
+ .game {
+   max-width: 32rem;
+ }
+ 
+ .reels-wrapper {
+   height: 2.9rem;
+ }
+ 
+ .reel {
+   font-size: 3.5rem;
+ }
+ 
+  .info h2 {
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
+  }
 }
